# SFML-projects

./: CMakeLists.txt  README.md
src/: content_manager.cpp  content_manager.hpp  game.cpp  game.hpp  logger.cpp  logger.hpp  main.cpp  screen.hpp  ui_controls.cpp  ui_controls.hpp
